# web-app

./: .gitignore  docker-compose.yml
backend/backend-rust/: Cargo.toml  Dockerfile
backend/backend-rust/src/: main.rs
frontend/frontend-react/: package-lock.json  package.json
frontend/frontend-react/src/: App.js  Form.css  Form.js
tools/: start-dev-frontend.ps1
