[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-cors = "0.5"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
postgres = "0.19.0"
serde_json = "1"
tokio-postgres = "0.7.2"
dotenv = "0.15.0"